--- a/src/main/resources/templates/Medicine/medicine-list.html
+++ b/src/main/resources/templates/Medicine/medicine-list.html
@@ -33,7 +33,7 @@
     <td th:text="${medicine.getIsSteroid()}"></td>
     <td th:text="${medicine.getIsAntibiotic()}"></td>
     <td th:text="${medicine.getIsPrescriptionNeeded()}"></td>
-        <td><a th:href="@{/edit/{id}(id=${medicine.id})}">EDIT</a> <a th:href="@{/delete/{id}(id=${medicine.id})}">DELETE</a> <a th:href="@{/buy/{id}(id=${medicine.id})}">BUY</a> </td><br>
+        <td><a th:href="@{/medicine/edit/{id}(id=${medicine.id})}">EDIT</a> <a th:href="@{/medicine/delete/{id}(id=${medicine.id})}">DELETE</a> <a th:href="@{/medicine/buy/{id}(id=${medicine.id})}">BUY</a> </td><br>
     </tr>
     </tbody>
 </table>
