added Family members, preparation for future connection of member with sickness

--- a/src/main/resources/templates/Sickness/sickness-edit.html
+++ b/src/main/resources/templates/Sickness/sickness-edit.html
@@ -13,7 +13,7 @@
     <p>Starting date: <input type="date" th:field="*{startingDate}"></p>
     <p>Duration: <input type="text" th:field="*{duration}"></p>
     <p>Description: <input type="text" th:field="*{description}"></p>
-    <p><input type="submit" value="Save medicine"></p>
+    <p><input type="submit" value="Save illness"></p>
 </form>
 </body>
 </html>
