--- a/src/main/resources/templates/Medicine/medicine-list.html
+++ b/src/main/resources/templates/Medicine/medicine-list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Medicine List</title>
     <style>
         table, th, td {
             border: 1px solid black;
