--- a/src/main/resources/templates/Medicine/medicine-list.html
+++ b/src/main/resources/templates/Medicine/medicine-list.html
@@ -15,7 +15,7 @@
     <tr>
         <th>Medicine name </th>
 <!--        <th>Expiry date </th>-->
-        <th>Price </th>
+<!--        <th>Price </th>-->
 <!--        <th>Quantity left </th>-->
         <th>Description </th>
         <th>Is steroid </th>
@@ -28,7 +28,7 @@
     <tr>
     <td th:text="${medicine.getName()}"></td>
 <!--    <td th:text="${medicine.getExpiryDate()}"></td>-->
-    <td th:text="${medicine.getPrice()}"></td>
+<!--    <td th:text="${medicine.getPrice()}"></td>-->
 <!--    <td th:text="${medicine.getQuantityLeft()}"></td>-->
     <td th:text="${medicine.getDescription()}"></td>
     <td th:text="${medicine.getIsSteroid()}"></td>
